# searchkit

./: .gitignore  Cargo.toml  README.md  corpus.txt
data/: corpus.fm  corpus.txt  fm.idx  index.inv  wiki.fm
data/sample/: wiki.txt
scripts/: bench_build.sh  bench_query.sh
src/: lib.rs  main.rs  rank.rs
src/adapter/: inv_adapter.rs  mod.rs
src/index/: bwt.rs  fmindex.rs  inverted.rs  lcp.rs  suffix_array.rs
src/query/: phrase.rs
src/rank/: bm25.rs  rank.rs
src/text/: corpus.rs  tokenize.rs
src/util/: bitvec.rs  mmap.rs  rrr.rs  timer.rs  varint.rs
